# crevopt

./: .gitignore  LICENSE.md  README.md  crevopt.py  example_notebook.ipynb  pyproject.toml
crevopt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sample_data/: promice_mask.tif
src/crevopt/: __init__.py  detect.py
